re-re-fixed media container display on mobile

--- a/src/pages/About/styles.scss
+++ b/src/pages/About/styles.scss
@@ -61,7 +61,7 @@
 }
 
 @media (max-width: 520px) {
-	.medias-container {
+	.media-container {
 		width: 100%;
 		.medias {
 			width: 60%;
